--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -16,7 +16,7 @@ ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🛡隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
@@ -24,7 +24,7 @@ ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 ruleset=GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
+;ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
@@ -35,8 +35,8 @@ ruleset=YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/R
 ;ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ;ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ;ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+;ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+;ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -55,19 +55,19 @@ ruleset=漏网之鱼,[]FINAL
 ;custom_proxy_group=🚀 节点选择`select`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 
 
-;custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-;custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换
-;custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🏡 家宽节点`[]🐸 手动切换
+custom_proxy_group=YouTube`select`[]节点选择`[]ENGLISH`[]US`[]FR`[]HK`[]ASIA[]手动切换`[]DIRECT
+custom_proxy_group=AI`url-test`[]US`[]AU`[]CA`[]手动切换`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Copilot`select`[]节点选择`[]手动切换`[]ENGLISH`[]SG`[]VN`[]THAI
 ;custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 ;custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 ;custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-;custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]节点选择`[]手动切换`[]DIRECT
 ;custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-;custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]HK`[]CA`[]自动选择`[]US`[]手动切换`[]节点选择
 ;custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
 ;custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🎥 奈飞节点`[]🐸 手动切换
 ;custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-;custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
+custom_proxy_group=FCM`select`[]节点选择`[]自动选择`[]🐸 手动切换
 ;custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 ;custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
 custom_proxy_group=国内媒体`select`[]DIRECT`[]节点选择`[]手动切换
@@ -83,10 +83,10 @@ tom_proxy_group=ASIA`url-test`[]SG`[]JP`[]HK`[]TW`[]THAI`[]INDO`http://www.gstat
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]全球直连
-custom_proxy_group=电报信息`select`[]节点选择`[]全球直连
-custom_proxy_group=微软服务`select`[]全球直连`[]节点选择
-custom_proxy_group=苹果服务`select`[]节点选择`[]全球直连
-custom_proxy_group=谷歌FCM`select`[]节点选择`[]全球直连`[]自动选择
+custom_proxy_group=Telegram`select`[]节点选择`[]全球直连
+custom_proxy_group=Microsoft`select`[]全球直连`[]节点选择
+custom_proxy_group=Apple`select`[]节点选择`[]全球直连
+custom_proxy_group=Google`select`[]节点选择`[]全球直连`[]自动选择
 custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择`[]自动选择
 custom_proxy_group=全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=应用净化`select`[]REJECT`[]DIRECT
@@ -120,7 +120,7 @@ custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_
 ;custom_proxy_group=⭐ 香港故转`fallback`!!GROUPID=!0!!(香港|HK|Hong Kong|🇭🇰|HongKong)(?!.*(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)(?!.*(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x))`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 
