--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -49,6 +49,7 @@ custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=AU`url-test`(澳大利亚|Australia|AU|australia)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=CA`url-test`(加拿大|canada|CA|Canada)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=BR`url-test`(英国|British|UK|England)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=NZ`url-test`(新西兰|New Zealand|NZ|zealand)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TW`url-test`(台湾|Taiwan|TW|aiwan)`http://www.gstatic.com/generate_204`300,,50
