--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -77,7 +77,7 @@ custom_proxy_group=ENGLISH`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`http:
 custom_proxy_group=ASIA`url-test`[]SG`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]TW`[]THAI`[]INDO`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
 
-custom_proxy_group=CHEAP`url-test`(1x|1倍||0.5|0.5倍|0.5x)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=CHEAP`url-test`(?!.*(1x|1倍||0.5|0.5倍|0.5x))`http://www.gstatic.com/generate_204`300,,50
 
 
 
