--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -14,7 +14,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/flyingrichard/richard/justinR/ProxyLite.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
-ruleset=CHEAP,https://raw.githubusercontent.com/flyingrichard/richard/justinR/cheap.list
+;ruleset=CHEAP,https://raw.githubusercontent.com/flyingrichard/richard/justinR/cheap.list
 
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -31,6 +31,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -41,6 +42,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 国内媒体`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM
@@ -77,7 +79,7 @@ custom_proxy_group=ENGLISH`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`http:
 custom_proxy_group=ASIA`url-test`[]SG`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]TW`[]THAI`[]INDO`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
 
-custom_proxy_group=CHEAP`select`(直连|直连 1x|1x|1倍||0.5|0.5倍|0.5x)
+;custom_proxy_group=CHEAP`select`(直连|直连 1x|1x|1倍||0.5|0.5倍|0.5x)
 
 
 
