--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -14,6 +14,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/flyingrichard/richard/justinR/ProxyLite.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
+ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 ;ruleset=cheap,https://raw.githubusercontent.com/flyingrichard/richard/justinR/cheap.list
 
 ;;;;;;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
