--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -64,7 +64,7 @@ custom_proxy_group=NZ`url-test`(新西兰|New Zealand|NZ|zealand)`http://www.gst
 custom_proxy_group=TW`url-test`(台湾|Taiwan|TW|aiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=GM`url-test`(德国|German|Germany|german)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=FR`url-test`(法国|France|FR|france)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=INDO`url-test`(印度尼西亚|Indonesia)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=INDO`url-test`(印度尼西亚|印尼|Indonesia)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=THAI`url-test`(泰国|Thailand)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=SG`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
