--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -11,7 +11,7 @@
 ;多国家分组：支持港/日/美
 
 
-
+ruleset=canadasite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/canada%40site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
