--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -12,6 +12,8 @@
 
 
 ruleset=canadasite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/canada%40site.list
+ruleset=USsite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/US%40site.list
+ruleset=japansite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/japan%40site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
@@ -61,6 +63,8 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择
 custom_proxy_group=AI`select`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH
 custom_proxy_group=canadasite`url-test`[]CA
+custom_proxy_group=USsite`url-test`[]🇺🇲 美国节点
+custom_proxy_group=japansite`url-test`[]🇯🇵 日本节点
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=KP NKR朝鲜`url-test`(朝鲜|north Korea|kp)`http://www.gstatic.com/generate_204`600,,50
