--- a/ACL4SSR_Online_MultiCountry.ini
+++ b/ACL4SSR_Online_MultiCountry.ini
@@ -12,7 +12,7 @@
 
 
 ruleset=canadasite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/canada%40site.list
-ruleset=USsite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/US%40site.list
+ruleset=USsite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/US77777site.list
 ruleset=japansite,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/japan%40site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
