--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -56,7 +56,7 @@ custom_proxy_group=AI`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]ENGLISH`
 ;custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=MO Macau`url-test`(澳门|MC|mc|Macau|macau|MO|mo|MACAU)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=KP NKR朝鲜`url-test`(朝鲜|north Korea|kp)`http://www.gstatic.com/generate_204`600,,50
+;custom_proxy_group=KP NKR朝鲜`url-test`(朝鲜|north Korea|kp)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=IN India`url-test`(印度|India|INDIA|india)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
