--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -137,7 +137,7 @@ custom_proxy_group=Russia`url-test`(俄罗斯|Russia)`http://www.gstatic.com/gen
 
 custom_proxy_group=ENGLISH`url-test`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=ASIA`url-test`[]SG`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]TW`[]MO Macau`[]KOREA`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
+;custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
 
 
 
