--- a/JR_MultiCountry.ini
+++ b/JR_MultiCountry.ini
@@ -16,8 +16,8 @@
 ;ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/flyingrichard/richard/justinR/ProxyLite.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/justinR/Direct.list
+;ruleset=🚀 节点选择,https://raw.githubusercontent.com/flyingrichard/richard/justinR/ProxyLite.list
 
 ;;;;;;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ;;;;;;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
