--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -101,6 +101,7 @@ custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands)`http://cp
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=AQ 南极洲`url-test`(南极洲|AQ)`http://cp.cloudflare.com/generate_204`300,,50
 
 
 
