--- a/FullMode_clash.ini
+++ b/FullMode_clash.ini
@@ -22,7 +22,7 @@ ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/
 
 
 
-
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/chinadirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
